join a socket room and disconnect
