# doc/api/swagger.json
@@ -201,6 +201,8 @@ definitions:
         type: integer
       name:
         type: string
+      identifier:
+        type: string
       status:
         type: string
         enum:
@@ -224,7 +226,7 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/Answer'
-      nb_positive_votes:
+      nb_positives_votes:
         description: Number of positives votes for this question.
         type: integer
       nb_negatives_votes:
